--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Banco.ba_Cbte_Ban_Info
 @{
-    ViewBag.Title = "Modificar cheque";
+    ViewBag.Title = "Modificar débito";
     Layout = "~/Views/Shared/_Layout.cshtml";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
@@ -14,10 +14,13 @@
         $('#cb_Fecha').datepicker({
             autoclose: true
         })
+        $("#IdBanco").change(function () {
+            armar_diario();
+        });
     });
     var selectedIDs;
     function OnBeginCallback(s, e) {
-        e.customArgs["IdTipo_Persona"] = $("#IdTipo_Persona").val();
+        e.customArgs["TipoPersona"] = $("#IdTipo_Persona").val();
         e.customArgs["Entidad"] = IdEntidad.GetValue();
         e.customArgs["selectedIDs"] = selectedIDs;
     }
@@ -30,8 +33,8 @@
     }
     function MostrarModal() {
         selectedIDs = "";
-        GridView_cheque_op_x_cruzar.PerformCallback();
-        GridView_cheque_op_x_cruzar.UnselectRows();
+        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
+        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
         $("#OpModal").modal("show");
     }
 
@@ -42,7 +45,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("EditingAddNew", "ChequeBanco",new { Area = "Banco"})',
+            url: '@Url.Action("EditingAddNew", "NotaDeDebitoBanco",new { Area = "Banco"})',
             async: false,
             bDeferRender: true,
             bProcessing: true,
@@ -54,9 +57,9 @@
             }
         });
         selectedIDs = "";
-        GridView_cheque_op_x_cruzar.PerformCallback();
-        GridView_cheque_op_x_cruzar.UnselectRows();
-        GridView_cheque_op.PerformCallback();
+        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
+        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
+        GridView_DebitoBanco_op.PerformCallback();
         $("#OpModal").modal("hide");
     }
 
@@ -125,13 +128,22 @@
     }
 </script>
 
-@using (Html.BeginForm("Modificar", "ChequeBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Modificar", "NotaDeDebitoBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdTipocbte)
     @Html.HiddenFor(q => q.IdCbteCble)
-    @Html.HiddenFor(q => q.cb_Cheque)
-    @Html.HiddenFor(q => q.IdBanco)
+
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+
+    }
+
     <div class="modal fade" id="OpModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -141,7 +153,7 @@
                     <h4 class="modal-title">Ordenes de pago</h4>
                 </div>
                 <div class="modal-body">
-                    @Html.Action("GridViewPartial_cheque_op_x_cruzar")
+                    @Html.Action("GridViewPartial_DebitoBanco_op_x_cruzar")
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" onclick="AddOP();">Aceptar</button>
@@ -161,7 +173,14 @@
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-7 col-md-2">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdTipoNota">Tipo de nota:*</label>
+                    @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "IdTipoNota", "Descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-offset-4 col-md-2">
                 <div class="form-group">
                     <label for="cb_Fecha">Fecha:*</label>
                     <div class="input-group date">
@@ -176,62 +195,35 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdBanco">Cuenta bancaria:*</label>
+                    @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_banco_cuenta, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco" })
+                    @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2 col-md-offset-4">
+                <div class="form-group">
+                    <label for="cb_Valor">Valor</label>
+                    @Html.TextBoxFor(q => q.cb_Valor, new { @id = "cb_Valor", @class = "form-control", @readonly = "readonly" })
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#tab_cheque" aria-controls="facturas" role="tab" data-toggle="tab">Datos del cheque</a>
+                <a href="#tab_diario" aria-controls="vales" role="tab" data-toggle="tab">Diario</a>
             </li>
             <li>
                 <a href="#tab_op" aria-controls="vales" role="tab" data-toggle="tab">Ordenes de pago</a>
             </li>
-            <li>
-                <a href="#tab_diario" aria-controls="vales" role="tab" data-toggle="tab">Diario</a>
-            </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
-            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_cheque">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="IdBanco">Cuenta bancaria:*</label>
-                            @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_banco_cuenta, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco", @disabled = "disabled" })
-                            @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-offset-2 col-md-2">
-                        <div class="form-group">
-                            <label for="cb_Cheque"># Cheque:*</label>
-                            @Html.TextBoxFor(q => q.cb_Cheque, new { @class = "form-control", @id = "cb_Cheque", @readonly = "readonly" })
-                            @Html.ValidationMessageFor(q => q.cb_Cheque, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="cb_Valor">Valor</label>
-                            @Html.TextBoxFor(q => q.cb_Valor, new { @id = "cb_Valor", @class = "form-control", @readonly = "readonly" })
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label for="cb_ciudadChq">Ciudad:*</label>
-                            @Html.DropDownListFor(q => q.cb_ciudadChq, new SelectList(ViewBag.lst_ciudad, "IdCiudad", "Descripcion_Ciudad"), new { @class = "form-control", @id = "cb_ciudadChq" })
-                            @Html.ValidationMessageFor(q => q.cb_ciudadChq, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-9">
-                        <div class="form-group">
-                            <label for="cb_giradoA">Girado a:*</label>
-                            @Html.TextBoxFor(q => q.cb_giradoA, new { @class = "form-control", @id = "cb_giradoA" })
-                            @Html.ValidationMessageFor(q => q.cb_giradoA, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_op">
                 <div class="row">
                     <div class="col-md-3">
@@ -243,7 +235,7 @@
                     <div class="col-md-9">
                         <div class="form-group">
                             <label for="IdEntidad">Beneficiario:*</label>
-                            @Html.Partial("_CmbPersona_ChequeBanco", Model)
+                            @Html.Partial("_CmbPersona_DebitoBanco", Model)
                             @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -256,10 +248,10 @@
                     </div>
                 </div>
                 <br />
-                @Html.Action("GridViewPartial_cheque_op")
+                @Html.Action("GridViewPartial_DebitoBanco_op")
             </div>
 
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_diario">
                 @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
             </div>
         </div>
@@ -267,7 +259,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "ChequeBanco", new { Area = "Banco" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "NotaDeDebitoBanco", new { Area = "Banco" }, null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
