--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias_det.cshtml
@@ -6,7 +6,7 @@
         settings.KeyFieldName = "dt_secuencia";
         //int IdSucursalOrigen = 0, int IdBodegaOrigen = 0, decimal IdTransferencia = 0
         settings.Width = Unit.Percentage(100);
-        settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "TransferenciasInventario", Action = "EditingAddNew", Area = "Inventario" };
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "TransferenciasInventario", Action = "EditingUpdate", Area = "Inventario" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "TransferenciasInventario", Action = "EditingDelete", Area = "Inventario" };
@@ -29,30 +29,31 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdProducto"] = null;
+            e.NewValues["IdProducto"] = 0;
             e.NewValues["IdUnidadMedida"] = null;
             e.NewValues["dt_cantidad"] = 0;
         };
 
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdProducto";
+            column.FieldName = "pr_descripcion";
             column.Caption = "Producto";
-            column.Width = Unit.Percentage(50);
-            column.EditorProperties().ComboBox(p =>
-            {
-                p.Columns.Add("pr_descripcion", "Descripción").Width = Unit.Percentage(100);
-                p.TextField = "pr_descripcion";
-                p.ValueField = "IdProducto";
-                p.ValueType = typeof(decimal);
-                p.DataSource = ViewBag.lst_producto;
-            });
-
+            column.Width = Unit.Percentage(60);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
 
-
-
-
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdProducto";
+            column.Caption = "Producto";
+            column.Width = Unit.Percentage(30);
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
+            {
+                Html.RenderPartial("_CmbProducto_TransferenciaInventario", DataBinder.Eval(c.DataItem, "IdProducto"));
+            });
+        });
 
 
         settings.Columns.Add(column =>
@@ -79,4 +80,4 @@
        
     });
 }
-@grid.Bind(Model.list_detalle).GetHtml()
+@grid.Bind(Model).GetHtml()
