--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribuion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribuion.cshtml
@@ -63,7 +63,7 @@
                 if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "estado")) ==true && Convert.ToInt32(DataBinder.Eval(tc.DataItem, "can_x_distribuir")) >Convert.ToInt32(DataBinder.Eval(tc.DataItem, "can_distribuida")) )
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Distribuir", "Nuevo", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdMovi_inven_tipo = DataBinder.Eval(tc.DataItem, "IdMovi_inven_tipo"), IdNumMovi = DataBinder.Eval(tc.DataItem, "IdNumMovi") })
+                Html.ActionLink("Distribuir", "Nuevo", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdMovi_inven_tipo = DataBinder.Eval(tc.DataItem, "IdMovi_inven_tipo"), IdNumMovi = DataBinder.Eval(tc.DataItem, "IdNumMovi"), signo= DataBinder.Eval(tc.DataItem, "signo") })
                     );
                 }
             });
