--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_CmbProducto_TransferenciaInventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_CmbProducto_TransferenciaInventario.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "EgresoInventario", Action = "CmbProducto_TransferenciaInventario", Area = "Inventario" };
+        settings.CallbackRouteValues = new { Controller = "TransferenciasInventario", Action = "CmbProducto_TransferenciaInventario", Area = "Inventario" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pr_descripcion";
@@ -19,8 +19,8 @@
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 80);
 
     })
-    .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.EgresoInventarioController().get_list_bajo_demanda,
-    new Core.Erp.Web.Areas.Inventario.Controllers.EgresoInventarioController().get_info_bajo_demanda).Bind(Model);
+    .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.TransferenciasInventarioController().get_list_bajo_demanda,
+    new Core.Erp.Web.Areas.Inventario.Controllers.TransferenciasInventarioController().get_info_bajo_demanda).Bind(Model);
 }
 @comboBox.GetHtml()
 
