--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_CmbProducto_Inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_CmbProducto_Inventario.cshtml
@@ -1,10 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "CmbProducto_Inventario";
-}
-
-
-@using System.Web.UI.WebControls;
+﻿@using System.Web.UI.WebControls;
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
@@ -15,17 +9,17 @@
         settings.CallbackRouteValues = new { Controller = "InventarioReportes", Action = "CmbProducto_Inventario", Area = "Reportes" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
-        settings.Properties.TextField = "pr_descripciom";
-        settings.Properties.TextFormatString = "[{0}] {1}";
+        settings.Properties.TextField = "pr_descripcion";
+        settings.Properties.TextFormatString = "[{1}] {2}";
         settings.Properties.ValueField = "IdProducto";
-        settings.Properties.ValueType = typeof(int);
-        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e,){cargar_producto()}";
+        settings.Properties.ValueType = typeof(decimal);
 
         settings.Properties.Columns.Add("IdProducto", "ID", 10);
-        settings.Properties.Columns.Add("pr_descripcion", "Descripción", 90);
-    })
-    .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.InventarioReportesController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Reportes.Controllers.InventarioReportesController().get_info_bajo_demanda)
-    .Bind(Model.IdProducto);
+        settings.Properties.Columns.Add("pr_codigo", "Código", 10);
+        settings.Properties.Columns.Add("pr_descripcion", "Producto", 80);
 
+    })
+    .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.InventarioReportesController().get_list_bajo_demanda,
+    new Core.Erp.Web.Areas.Reportes.Controllers.InventarioReportesController().get_info_bajo_demanda).Bind(Model);
 }
 @comboBox.GetHtml()
