--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Tipo catalogo";
+    ViewBag.Title = "Catálogo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
