--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_empleado_Info
 @{
-    ViewBag.Title = "Nuevo empleado";
+    ViewBag.Title = "Modificar empleado";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
