--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Parametros contables";
+    ViewBag.Title = "Parámetros contables";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
