--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_Parametros_Info
 @{
-    ViewBag.Title = "Parametrización contable";
+    ViewBag.Title = "Parámetrización contable";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
