--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Modificar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_prestamo_Info
 
 @{
-    ViewBag.Title = "Modificar prestamo";
+    ViewBag.Title = "Modificar préstamo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
