--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Comprobante contable";
+    ViewBag.Title = "Depreciación";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
