--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/_GridViewPartial_catalogos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/_GridViewPartial_catalogos.cshtml
@@ -68,11 +68,11 @@
 
 
 
-        settings.Columns.Add("IdCatalogo","ID");
-        settings.Columns.Add("CodCatalogo","Código");
-        settings.Columns.Add("ca_descripcion","Descripción");
-        settings.Columns.Add("ca_orden","Orden");
-        settings.Columns.Add("ca_estado","Estado");
+        settings.Columns.Add("IdCatalogo", "ID").Width = Unit.Percentage(8);
+        settings.Columns.Add("CodCatalogo","Código").Width = Unit.Percentage(8);
+        settings.Columns.Add("ca_descripcion","Descripción").Width = Unit.Percentage(68);
+        settings.Columns.Add("ca_orden","Orden").Width = Unit.Percentage(8);
+        settings.Columns.Add("ca_estado","Estado").Width = Unit.Percentage(8);
     });
 }
 @grid.Bind(Model).GetHtml()
