--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/Modificar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_catalogoTipo_Info
 
 @{
-    ViewBag.Title = "Modificar Catalogo ";
+    ViewBag.Title = "Modificar catálogo ";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
