--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Nuevo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_prestamo_Info
 
 @{
-    ViewBag.Title = "Nuevo prestamo";
+    ViewBag.Title = "Nuevo préstamo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
