--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
@@ -66,7 +66,7 @@
     function armar_diario() {
         var datos = {
             IdBanco: $("#IdBanco").val(),
-            IdTipoNota = $("#IdTipoNota").val()
+            IdTipoNota : $("#IdTipoNota").val()
         }
         $.ajax({
             type: 'POST',
